# ProPainter_logos

./: pyproject.toml
propainter_logos/: inference_propainter.py
propainter_logos/core/: loss.py  trainer.py  trainer_flow_w_edge.py
propainter_logos/model/: propainter.py  recurrent_flow_completion.py
propainter_logos/model/modules/: flow_comp_raft.py
propainter_logos/scripts/: evaluate_flow_completion.py  evaluate_propainter.py
